--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- Why did you add this boxicon here why note use "lucide-react" or "react-icons? -->
     <title>SimpleWood</title>
   </head>
-  <body class="font-poppins">
+
+  <!-- adding the body font class here is dope but you'd want to do it in the app.jsx -->
+  <body class="font-poppins"> 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
